<resources>
    <string name="app_name">TriviaMatch</string>
    <string name="trivia_match">Trivia Match</string>
    <string name="play">Play Game</string>
    <string name="instructions">Instructions</string>
    <string name="timer">00 : 00</string>
    <string name="question">QUESTION HERE</string>
    <string name="menu">Menu</string>
    <string name="score">00000</string>
    <string name="current_score">Current Score:</string>
    <string name="highest_score">Highest Score:</string>
</resources>