<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trivia_match"
            android:textSize="68sp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDy="1"
            android:shadowDx="1"
            android:shadowRadius="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView"
            app:layout_constraintVertical_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/bungee" android:textAlignment="center"
            android:textAllCaps="false" android:textStyle="bold"/>
    <Button
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play"
            android:textColor="@color/black"
            android:background="@drawable/buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.578"/>
    <Button
            android:text="@string/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instructions"
            android:textColor="@color/black"
            android:background="@drawable/buttons"
            app:layout_constraintEnd_toEndOf="@+id/play"
            app:layout_constraintStart_toStartOf="@+id/play"
            app:layout_constraintTop_toBottomOf="@+id/play"
            android:layout_marginTop="28dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>