<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:background="@drawable/card"
>


    <TextView
            android:text="@string/menu"
            android:fontFamily="@font/bungee"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.096" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/score"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/score"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintBottom_toTopOf="@+id/bgm"/>
    <TextView
            android:text="@string/current_score"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/textView8"/>
    <TextView
            android:text="@string/highest_score"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_bold"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintBottom_toTopOf="@+id/sfx"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bgm"
            app:layout_constraintStart_toEndOf="@+id/sfx"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="128dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sfx"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/bgm"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>